--- a/src/app/components/counter-blocks/counter-blocks.component.html
+++ b/src/app/components/counter-blocks/counter-blocks.component.html
@@ -1,25 +1,24 @@
 <div (scroll)="($event)" class="counter-block-container">
-    <div class="counter-block">
-        <div class="counter-block-first">
-            <h6>Woningen verkocht</h6>
-            <div>
-                <h3><span>>6</span></h3>
-            </div>
-            <img src="assets/panden.svg" alt="">
-        </div>
-        <hr>
-        <div class="counter-block-second">
-            <h6>Huidige vierkante meters</h6>
-            <div>
-                <h3><span>>800</span> ㎡  </h3>
-            </div>
-            <img src="assets/m2.svg" alt="">
-        </div>     
+  <div class="counter-block">
+    <div class="counter-block-first">
+      <h6>Woningen verkocht</h6>
+      <div>
+        <h3><span>+6</span></h3>
+      </div>
+      <img src="assets/panden.svg" alt="" />
     </div>
-    <div routerLink="/verkoop" class="counter-block-third">
-        <h6>Huidige Aanbod</h6>
-        <img src="assets/arrow-btn-large-right.svg" alt="">
+    <hr />
+    <div class="counter-block-second">
+      <h6>Huidige vierkante meters</h6>
+      <div>
+        <h3><span>+800</span> ㎡</h3>
+      </div>
+      <img src="assets/m2.svg" alt="" />
     </div>
-    <hr class="second-hr">
+  </div>
+  <div routerLink="/verkoop" class="counter-block-third">
+    <h6>Huidige Aanbod</h6>
+    <img src="assets/arrow-btn-large-right.svg" alt="" />
+  </div>
+  <hr class="second-hr" />
 </div>
-
