--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,27 +1,28 @@
 <footer>
-    <div class="footer-total"> 
-        <div class="footer-total-one">
-            <div class="logo">
-                <h2>OSR</h2>
-                <p>Real Estate | Advisory | Investments</p>
-            </div>
-            <p>Adress 00,</p>
-            <p>1002 PH Berken</p>
-            <p>KVK 7214124</p>
-        </div>
-        <div class="footer-total-two">
-            <a href="">DIENSTEN</a>
-            <a routerLink="/verkoop"  class="a-dun" href="">Aan & Verkoop</a>
-            <a routerLink="/advies"  class="a-dun" href="">Advies</a>
-            <a routerLink="/renovatie"  class="a-dun" href="">Renovatie & Transformatie</a>
-        </div>
-        <hr>
-        <div class="footer-total-three">
-
-            <a routerLink="/" href="">HOME</a>
-            <a routerLink="/team" href="">TEAM</a>
-            <a routerLink="/" href="">OVER</a>
-            <a routerLink="/contact" href="">CONTACT</a>
-        </div>
+  <div class="footer-total">
+    <div class="footer-total-one">
+      <div class="logo">
+        <h2>OSR</h2>
+        <p>Real Estate | Advisory | Investments</p>
+      </div>
+      <p>Adress 00,</p>
+      <p>1002 PH Berken</p>
+      <p>KVK 7214124</p>
     </div>
+    <div class="footer-total-two">
+      <a href="">DIENSTEN</a>
+      <a routerLink="/verkoop" class="a-dun" href="">Aan & Verkoop</a>
+      <a routerLink="/advies" class="a-dun" href="">Advies</a>
+      <a routerLink="/renovatie" class="a-dun" href=""
+        >Renovatie & Transformatie</a
+      >
+    </div>
+    <hr />
+    <div class="footer-total-three">
+      <a routerLink="/" href="">HOME</a>
+      <a routerLink="/team" href="">TEAM</a>
+      <a routerLink="/" href="">OVER</a>
+      <a routerLink="/contact" href="">CONTACT</a>
+    </div>
+  </div>
 </footer>
