--- a/src/app/components/image-tekst/image-tekst.component.html
+++ b/src/app/components/image-tekst/image-tekst.component.html
@@ -1,31 +1,42 @@
-<div class="image-tekst-container" >
-    <div class="image-tekst-first" > 
-        <img class="oscar-foto" src="assets/osr-group.svg" alt="">
-        <!-- <img class="masterclass" src="assets/masterclass.svg" alt=""> -->
+<div class="image-tekst-container">
+  <div class="image-tekst-first">
+    <img class="oscar-foto" src="assets/osr-group.svg" alt="" />
+    <!-- <img class="masterclass" src="assets/masterclass.svg" alt=""> -->
+  </div>
+  <div class="image-tekst-second">
+    <div class="image-tekst-second-text">
+      <h5>Over OSR</h5>
+      <hr />
+      <p>
+        <span class="bold">
+          Investeerder, ontwikkelaar en adviseur in de vastgoed sector.
+        </span>
+        <br />
+        <br />
+        OSR Real Estate is een jong en dynamisch bedrijf. In november 2019 is er
+        gestart met het investeren in residentieel vastgoed. In de
+        daaropvolgende tijd is er stevig gebouwd aan een actief en betrouwbaar
+        netwerk. OSR Real Estate investeert bij voorkeur voor de langere
+        termijn, in heel Nederland, maar heeft de focus op de Randstedelijke
+        gebieden. Op professionele wijze en met een duurzaam oogmerk wordt het
+        vastgoed geëxploiteerd
+        <br />
+        <br />
+        Naast het investeren biedt OSR Real Estate met het initiatief,
+        vastberadenheid en de kennis over zaken, ook een adviserende rol voor de
+        klant. Met de geruime ervaring kunnen wij goed inspelen op de telkens
+        wijzigende vastgoedmarkt, daarom kunnen wij onze klanten voorzien van
+        een doordacht en goed advies.
+        <br />
+        <br />
+        Tevens zijn wij gespecialiseerd in het renoveren en transformeren van
+        residentieel vastgoed.
+      </p>
     </div>
-    <div class="image-tekst-second" >
-        <div class="image-tekst-second-text">
-            <h5>Over OSR </h5>
-            <hr>
-            <p>
-                OSR Real Estate is een jong en dynamisch bedrijf. In november 2019 
-                is er gestart met het investeren in residentieel vastgoed. 
-                In de daaropvolgende tijd is er stevig gebouwd aan een actief en betrouwbaar netwerk. 
-                OSR Real Estate investeert bij voorkeur voor de langere termijn, in heel Nederland, maar heeft de focus op de Randstedelijke gebieden. 
-                Op professionele wijze en met een duurzaam oogmerk wordt het vastgoed geëxploiteerd 
-                <br>
-                <br>
-                Naast het investeren biedt OSR Real Estate met het initiatief, vastberadenheid en de kennis over zaken, ook een adviserende rol voor de klant. Met de geruime ervaring kunnen wij goed inspelen op de telkens wijzigende vastgoedmarkt, daarom kunnen wij onze klanten voorzien van een doordacht en goed advies. 
-                <br>
-                <br>
-                Tevens zijn wij gespecialiseerd in het renoveren en transformeren van residentieel vastgoed.
-                </p>
-        </div>
-        <div class="image-tekst-buttons">
-            <button class="btn-large-other">info@osr-realestate.nl</button>
-            <button class="btn-large-other">+31 6 41 55 02 27</button>
-            <button routerLink="/team" class="btn-large-other">ONS TEAM</button>
-
-        </div>
+    <div class="image-tekst-buttons">
+      <button class="btn-large-other">info@osr-realestate.nl</button>
+      <button class="btn-large-other">+31 6 41 55 02 27</button>
+      <button routerLink="/team" class="btn-large-other">ONS TEAM</button>
     </div>
+  </div>
 </div>
