--- a/src/app/components/header-new-new/header-new-new.component.scss
+++ b/src/app/components/header-new-new/header-new-new.component.scss
@@ -1,479 +1,444 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-
-body{
-    overflow: hidden;
+body {
+  overflow: hidden;
 }
 
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
 
 h2 {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-
-header{
-    position: sticky;
-    top: 0px;
-    margin-top: 10px;
-    background-color: transparent;
-    width: 100%;
-    z-index: 3;
-    transition: 0.5s ease-in-out;
-    top: 0;  
-    bottom: 0;  
-    left: 0 
-
-    
+header {
+  position: sticky;
+  top: 0px;
+  margin-top: 10px;
+  background-color: transparent;
+  width: 100%;
+  z-index: 3;
+  transition: 0.5s ease-in-out;
+  top: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .header_change {
-    background-color: #313131;
-    transition: 0.5s ease-in-out;
-    -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.08); 
-    box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.08);
+  background-color: #313131;
+  transition: 0.5s ease-in-out;
+  -webkit-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.08);
 }
 
-section{
-    position: relative;
-    height: calc(100vh - 3rem);
-    width: 100%;
-    overflow: hidden;
+section {
+  position: relative;
+  height: calc(100vh - 3rem);
+  width: 100%;
+  overflow: hidden;
 }
 
-.overlay{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgb(56, 165, 238, 0.5);
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgb(56, 165, 238, 0.5);
 }
 
-.container{
-    max-width: 80rem;
-    padding: 0 2rem;
-    margin: 0 auto;
-    display: flex;
-    position: relative;
+.container {
+  max-width: 80rem;
+  padding: 0 2rem;
+  margin: 0 auto;
+  display: flex;
+  position: relative;
 }
 
-.logo-container{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+.logo-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
-.nav-links{
-    flex: 2;
-    margin-top: 5px;
+.nav-links {
+  flex: 2;
+  margin-top: 5px;
 }
 
-
-.btn{
-    padding: .5rem 1.3rem;
-    border-radius: 2rem;
-    line-height: 1;
-    margin: 0 .2rem;
-    transition: .3s;
-    color: #ffffff;
+.btn {
+  padding: 0.5rem 1.3rem;
+  border-radius: 2rem;
+  line-height: 1;
+  margin: 0 0.2rem;
+  transition: 0.3s;
+  color: #ffffff;
 }
 
-.nav-links > ul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+.nav-links > ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.nav-link{
-    position: relative;
+.nav-link {
+  position: relative;
 }
 
-.nav-link > a{
-    line-height: 3rem;
-    color: #FFFFFF;
-    padding: 0 1.1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    transition: .5s;
+.nav-link > a {
+  line-height: 3rem;
+  color: #ffffff;
+  padding: 0 1.1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: 0.5s;
 }
 
 .nav-link > a:nth-child(3) {
-    color: #ffffff !important;
+  color: #ffffff !important;
 }
 
-.nav-link > a > i{
-    margin-left: .2rem;
+.nav-link > a > i {
+  margin-left: 0.2rem;
 }
 
-.nav-link:hover > a{
-    transform: scale(1.02);
+.nav-link:hover > a {
+  transform: scale(1.02);
 }
 
-.dropdown{
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 10rem;
-    transform: translateY(10px);
-    opacity: 0;
-    pointer-events: none;
-    transition: .5s;
-
+.dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 10rem;
+  transform: translateY(10px);
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.5s;
 }
 
-.dropdown ul{
-    position: relative;
-
+.dropdown ul {
+  position: relative;
 }
 
-.dropdown-link > a{
-    display: flex;
-    background-color: rgba(26, 26, 26, 0.6); 
-    color: #ffffff;;
-    padding: .5rem 1rem;
-    font-size: .9rem;
-    align-items: center;
-    justify-content: space-between;
-    transition: .3s;
-    border-radius: 5px;
-    margin-bottom: 2px;
-
+.dropdown-link > a {
+  display: flex;
+  background-color: rgba(26, 26, 26, 0.6);
+  color: #ffffff;
+  padding: 0.5rem 1rem;
+  font-size: 0.9rem;
+  align-items: center;
+  justify-content: space-between;
+  transition: 0.3s;
+  border-radius: 5px;
+  margin-bottom: 2px;
 }
 
-.dropdown-link:hover > a{
-    background-color: rgba(26, 26, 26, 1); ;
-    color: #ffffff;
+.dropdown-link:hover > a {
+  background-color: rgba(26, 26, 26, 1);
+  color: #ffffff;
 }
 
-
-.dropdown-link i{
-    transform: rotate(-90deg);
+.dropdown-link i {
+  transform: rotate(-90deg);
 }
 
-.arrow{
-    position: absolute;
-    width: 11px;
-    height: 11px;
-    top: -5.5px;
-    left: 32px;
-    background-color: #fff;
-    transform: rotate(45deg);
-    cursor: pointer;
-    transition: .3s;
-    z-index: -1;
+.arrow {
+  position: absolute;
+  width: 11px;
+  height: 11px;
+  top: -5.5px;
+  left: 32px;
+  background-color: #fff;
+  transform: rotate(45deg);
+  cursor: pointer;
+  transition: 0.3s;
+  z-index: -1;
 }
 
-.dropdown-link:first-child:hover ~ .arrow{
-    background-color: #3498db;
+.dropdown-link:first-child:hover ~ .arrow {
+  background-color: #3498db;
 }
 
-.dropdown-link{
-    position: relative;
+.dropdown-link {
+  position: relative;
 }
 
-
-
-.dropdown.second .arrow{
-    top: 10px;
-    left: -5.5px;
+.dropdown.second .arrow {
+  top: 10px;
+  left: -5.5px;
 }
 
 .nav-link:hover > .dropdown,
-.dropdown-link:hover > .dropdown{
-    transform: translate(0, 0);
-    opacity: 1;
-    pointer-events: auto;
+.dropdown-link:hover > .dropdown {
+  transform: translate(0, 0);
+  opacity: 1;
+  pointer-events: auto;
 }
 
-.hamburger-menu-container{
-    flex: 1;
-    display: none;
-    align-items: center;
-    justify-content: flex-end;
+.hamburger-menu-container {
+  flex: 1;
+  display: none;
+  align-items: center;
+  justify-content: flex-end;
 }
 
-.hamburger-menu{
-    width: 2.5rem;
-    height: 2.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+.hamburger-menu {
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
-.hamburger-menu div{
-    width: 1.6rem;
-    height: 3px;
-    border-radius: 3px;
-    background-color:#ffffff ;
-    position: relative;
-    z-index: 20;
-    transition: .5s;
+.hamburger-menu div {
+  width: 1.6rem;
+  height: 3px;
+  border-radius: 3px;
+  background-color: #ffffff;
+  position: relative;
+  z-index: 20;
+  transition: 0.5s;
 }
 
 .hamburger-menu div:before,
-.hamburger-menu div:after{
-    content: '';
-    position: absolute;
-    width: inherit;
-    height: inherit;
-    background-color: #ffffff;
-    border-radius: 3px;
-    transition: .5s;
+.hamburger-menu div:after {
+  content: "";
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  background-color: #ffffff;
+  border-radius: 3px;
+  transition: 0.5s;
 }
 
-.hamburger-menu div:before{
-    transform: translateY(-7px);
+.hamburger-menu div:before {
+  transform: translateY(-7px);
 }
 
-.hamburger-menu div:after{
-    transform: translateY(7px);
+.hamburger-menu div:after {
+  transform: translateY(7px);
 }
 
-#check{
-    position: absolute;
-    top: 50%;
-    right: 1.5rem;
-    transform: translateY(-50%);
-    width: 2.5rem;
-    height: 2.5rem;
-    z-index: 90000;
-    cursor: pointer;
+#check {
+  position: absolute;
+  top: 50%;
+  right: 1.5rem;
+  transform: translateY(-50%);
+  width: 2.5rem;
+  height: 2.5rem;
+  z-index: 90000;
+  cursor: pointer;
+  opacity: 0;
+  display: none;
+}
+
+#check:checked ~ .hamburger-menu-container .hamburger-menu div {
+  background-color: transparent;
+}
+
+#check:checked ~ .hamburger-menu-container .hamburger-menu div:before {
+  transform: translateY(0) rotate(-45deg);
+  background-color: #ffffff;
+}
+
+#check:checked ~ .hamburger-menu-container .hamburger-menu div:after {
+  transform: translateY(0) rotate(45deg);
+  background-color: #ffffff;
+}
+
+.diensten {
+  margin-left: 0px;
+  margin-top: 5px;
+  margin-right: -10px;
+}
+
+.tekst-logo {
+  color: white;
+  margin-top: -10px;
+  transition: animation 0.5s;
+}
+
+.tekst_change {
+  display: none;
+  transition: animation 0.5s;
+}
+
+.nav-active {
+  visibility: hidden;
+}
+
+@keyframes animation {
+  from {
     opacity: 0;
+    transform: translateY(15px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+@media (max-width: 920px) {
+  .hamburger-menu-container {
+    display: flex;
+  }
+
+  #check {
+    display: block;
+  }
+
+  .nav-btn {
+    position: fixed;
+    height: calc(100vh);
+    top: 0rem;
+    left: 0;
+    width: 100%;
+    background-color: #2b2b2b;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transform: translateX(100%);
+    transition: 0.65s;
+  }
+
+  #check:checked ~ .nav-btn {
+    transform: translateX(0);
+  }
+
+  #check:checked ~ .nav-btn .nav-link,
+  #check:checked ~ .nav-btn .log-sign {
+    animation: animation 0.5s ease forwards var(--i);
+  }
+
+  .nav-links {
+    flex: initial;
+    width: 100%;
+  }
+
+  .nav-links > ul {
+    flex-direction: column;
+  }
+
+  .nav-link {
+    width: 100%;
+    opacity: 0;
+    transform: translateY(15px);
+  }
+
+  .nav-link > a {
+    line-height: 1;
+    padding: 1.6rem 2rem;
+    color: #ffffff;
+  }
+
+  .nav-link:hover > a {
+    transform: scale(1);
+    background-color: #585858;
+  }
+
+  .dropdown,
+  .dropdown.second {
+    position: initial;
+    top: initial;
+    left: initial;
+    transform: initial;
+    opacity: 1;
+    pointer-events: auto;
+    width: 100%;
+    padding: 0;
+    background-color: #444444;
     display: none;
-}
+  }
 
-#check:checked ~ .hamburger-menu-container .hamburger-menu div{
+  .nav-link:hover > .dropdown,
+  .dropdown-link:hover > .dropdown {
+    display: block;
+  }
+
+  .nav-link:hover > a > i,
+  .dropdown-link:hover > a > i {
+    transform: rotate(360deg);
+  }
+
+  .dropdown-link > a {
     background-color: transparent;
-}
+    color: #fff;
+    padding: 1.2rem 2rem;
+    line-height: 1;
+  }
 
-#check:checked ~ .hamburger-menu-container .hamburger-menu div:before{
-    transform: translateY(0) rotate(-45deg);
-    background-color: #ffffff;
-}
+  .dropdown.second .dropdown-link > a {
+    padding: 1.2rem 2rem 1.2rem 3rem;
+  }
 
-#check:checked ~ .hamburger-menu-container .hamburger-menu div:after{
-    transform: translateY(0) rotate(45deg);
-    background-color: #ffffff;
-}
+  .dropdown.second .dropdown.second .dropdown-link > a {
+    padding: 1.2rem 2rem 1.2rem 4rem;
+  }
 
+  .dropdown-link:not(:nth-last-child(2)) {
+    border-bottom: none;
+  }
 
-.diensten{
-    margin-left:0px;
-    margin-top: 5px;
-    margin-right: -10px;
+  .nav-link:hover .arrow {
+    background-color: #3a3a3a;
+  }
+
+  .dropdown .dropdown .arrow {
+    display: none;
+  }
+
+  .dropdown-link:hover > a {
+    background-color: #3a3a3a;
+  }
+
+  .dropdown-link:first-child:hover ~ .arrow {
+    background-color: #1b2545;
+  }
+
+  .nav-link > a > i {
+    font-size: 1.1rem;
+    transform: rotate(-90deg);
+    transition: 0.7s;
+  }
+
+  .dropdown i {
+    font-size: 1rem;
+    transition: 0.7s;
+  }
+
+  .log-sign {
+    flex: initial;
+    width: 100%;
+    padding: 1.5rem 1.9rem;
+    justify-content: flex-start;
+    opacity: 0;
+    transform: translateY(15px);
+  }
+
+  .nav-active a {
+    visibility: visible;
+    font-size: 40px;
+    font-weight: bold;
   }
 
   .tekst-logo {
-    color: white;
-    margin-top: -10px;
-    transition: animation .5s;
+    display: none;
   }
 
-  .tekst_change {
-      display: none;
-      transition: animation .5s;
+  .diensten {
+    display: none;
   }
 
-.nav-active {
-    visibility: hidden;
-}
-
-@keyframes animation{
-    from{
-        opacity: 0;
-        transform: translateY(15px);
-    }
-    to{
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
-
-@media (max-width: 920px){
-    .hamburger-menu-container{
-        display: flex;
-    }
-
-    #check{
-        display: block;
-    }
-
-    .nav-btn{
-        position: fixed;
-        height: calc(100vh);
-        top: 0rem;
-        left: 0;
-        width: 100%;
-        background-color: #2b2b2b ;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        overflow-x: hidden;
-        overflow-y: auto;
-        transform: translateX(100%);
-        transition: .65s;
-    }
-
-    // .nav-btn{
-    //     position: fixed;
-    //     height: calc(100vh);
-    //     top: 0rem;
-    //     right: 0;
-    //     width: 300px;
-    //     background-color: #2b2b2b ;
-    //     flex-direction: column;
-    //     align-items: center;
-    //     justify-content: space-between;
-    //     overflow-x: hidden;
-    //     overflow-y: auto;
-    //     transform: translateX(200px);
-    //     transition: .65s;
-    //     top: 0;
-    //     right: 0;
-    // }
-
-
-    #check:checked ~ .nav-btn{
-        transform: translateX(0);
-    }
-
-    #check:checked ~ .nav-btn .nav-link,
-    #check:checked ~ .nav-btn .log-sign{
-        animation: animation .5s ease forwards var(--i);
-    }
-
-    .nav-links{
-        flex: initial;
-        width: 100%;
-    }
-
-    .nav-links > ul{
-        flex-direction: column;
-    }
-
-    .nav-link{
-        width: 100%;
-        opacity: 0;
-        transform: translateY(15px);
-    }
-
-    .nav-link > a{
-        line-height: 1;
-        padding: 1.6rem 2rem;
-        color: #FFFFFF
-    }
-
-    .nav-link:hover > a{
-        transform: scale(1);
-        background-color: #585858;
-    }
-
-    .dropdown, .dropdown.second{
-        position: initial;
-        top: initial;
-        left: initial;
-        transform: initial;
-        opacity: 1;
-        pointer-events: auto;
-        width: 100%;
-        padding: 0;
-        background-color: #444444;
-        display: none;
-    }
-    
-    .nav-link:hover > .dropdown,
-    .dropdown-link:hover > .dropdown{
-        display: block;
-    }
-
-    .nav-link:hover > a > i,
-    .dropdown-link:hover > a > i{
-        transform: rotate(360deg);
-    }
-
-    .dropdown-link > a{
-        background-color: transparent;
-        color: #fff;
-        padding: 1.2rem 2rem;
-        line-height: 1;
-    }
-
-    .dropdown.second .dropdown-link > a{
-        padding: 1.2rem 2rem 1.2rem 3rem;
-    }
-
-    .dropdown.second .dropdown.second .dropdown-link > a{
-        padding: 1.2rem 2rem 1.2rem 4rem;
-    }
-
-    .dropdown-link:not(:nth-last-child(2)){
-        border-bottom: none;
-    }
-
-    .nav-link:hover .arrow{
-        background-color: #3a3a3a;
-    }
-
-    .dropdown .dropdown .arrow{
-        display: none;
-    }
-
-    .dropdown-link:hover > a{
-        background-color: #3a3a3a;
-    }
-
-    .dropdown-link:first-child:hover ~ .arrow{
-        background-color: #1B2545;
-    }
-
-    .nav-link > a > i{
-        font-size: 1.1rem;
-        transform: rotate(-90deg);
-        transition: .7s;
-    }
-
-    .dropdown i{
-        font-size: 1rem;
-        transition: .7s;
-    }
-
-    .log-sign{
-        flex: initial;
-        width: 100%;
-        padding: 1.5rem 1.9rem;
-        justify-content: flex-start;
-        opacity: 0;
-        transform: translateY(15px);
-    }
-
-    .nav-active a {
-        visibility: visible;
-        font-size: 40px; 
-        font-weight: bold;
-    }
- 
-    .tekst-logo {
-        display: none;
-    }
-
-    .diensten {
-        display: none;
-    }
-
-    .btn-large {
-        border-radius: 0px!important;
-
-    }
-  
-
-
+  .btn-large {
+    border-radius: 0px !important;
+  }
 }
