--- a/src/app/components/header-new-new/pop-up/pop-up.component.scss
+++ b/src/app/components/header-new-new/pop-up/pop-up.component.scss
@@ -1,205 +1,261 @@
 .pop-up-background {
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-    top: 0px;
-    background-color: rgba(0,0,0,0.8);
-    z-index: 1000;
-    display: none;
-    position: fixed;
-    transition: 1s
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  top: 0px;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+  display: none;
+  position: fixed;
+  transition: 1s;
+  animation: fadein 0.4s;
 }
 
 .popup_change {
-    display: block;
+  display: block;
 }
 
 .pop-up {
-    width: 90%;
-    margin: auto;
-    height: 90vh;
-    margin-top: 30px;
-    border-radius: 10px 10px 10px 10px;
-    z-index: 1000;
-    transition: 1s
-
-
+  width: 90%;
+  margin: auto;
+  height: 90vh;
+  margin-top: 30px;
+  border-radius: 10px 10px 10px 10px;
+  z-index: 1000;
+  transition: 1s;
 }
 
-.pop-up-header{
-    background-color: #393939;
-    text-align: center;
-    display: flex;
-    border-radius: 10px 10px 0px 0px;
-    position: sticky;
+.pop-up-header {
+  background-color: #393939;
+  text-align: center;
+  display: flex;
+  border-radius: 10px 10px 0px 0px;
+  position: sticky;
 }
 
 .pop-up-header h3 {
-    color: #ffffff;
-    line-height: 30px;
-    padding: 10px;
-    width: 300px;
-    margin: auto;
+  color: #ffffff;
+  line-height: 30px;
+  padding: 10px;
+  width: 300px;
+  margin: auto;
 }
 
 .pop-up-header img {
-position: absolute;
-left: 10px;
-top: 25px;
-cursor: pointer;
-
+  position: absolute;
+  left: 10px;
+  top: 25px;
+  cursor: pointer;
 }
 
 .pop-up-container {
-    display: flex;
-    flex-direction: column;
-    overflow-y:auto;
-    height:80vh;
-    border-radius: 0px 0px 10px 10px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  height: 80vh;
+  border-radius: 0px 0px 10px 10px;
 }
 
 .pop-up-container-first {
-    background-color: #ffffff;
-    padding:20px;
-    border-radius: 0px 0px 0px 0px;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 0px 0px 0px 0px;
 }
 
 .pop-up-container-first div {
-    display: flex;
-    align-content: center;
-    align-items: center;
-    margin-bottom: 10px
+  display: flex;
+  align-content: center;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .pop-up-container-first div img {
-    margin-right:20px;
+  margin-right: 20px;
 }
 
-.pop-up-container-second{
-    background-color: #F1F2F4;
-    padding:20px;
+.pop-up-container-second {
+  background-color: #f1f2f4;
+  padding: 20px;
 }
 
-.pop-up-container-second h5{
-margin-bottom: 20px;
+.pop-up-container-second h5 {
+  margin-bottom: 20px;
 }
 
-.pop-up-container-second div { 
-    display: flex;
-    flex-direction: column;
+.pop-up-container-second div {
+  display: flex;
+  flex-direction: column;
 }
 
 .pop-up-container-second div input {
-    margin-bottom: 8px;
-    height: 32px;
-    border: 0px;
-    border-radius: 6px;
-    padding-left:10px
+  margin-bottom: 8px;
+  height: 32px;
+  border: 0px;
+  border-radius: 6px;
+  padding-left: 10px;
 }
 
 h3 {
-    letter-spacing: -0.5px;
+  letter-spacing: -0.5px;
 }
 
 h5 {
-    line-height: 25px;
+  line-height: 25px;
 }
 
 h6 {
-    letter-spacing: -0.5px;
+  letter-spacing: -0.5px;
 }
 
 p {
-    letter-spacing: -0.5px;
+  letter-spacing: -0.5px;
 }
 
 .sentencetwo {
-    font-weight: 300;
-    font-style:italic
+  font-weight: 300;
+  font-style: italic;
 }
 
 button {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .succes-message {
- margin-top: 100px;
+  margin-top: 100px;
 
-    img {
+  img {
     width: 100px;
     margin: auto;
     margin-bottom: 20px;
-    }
+  }
 
-    h5 {
-        width: 80%;
-        margin: auto;
-        text-align: center;
-        margin-bottom: 100px;
-        
-    }
+  h5 {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 100px;
+  }
 }
 
+.lds-ring {
+  margin: auto;
+  width: 80px;
+  height: 80px;
+  margin-top: 80px;
+  -webkit-animation: fadein 0.2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 0.2s; /* Firefox < 16 */
+  -ms-animation: fadein 0.2s; /* Internet Explorer */
+  -o-animation: fadein 0.2s; /* Opera < 12.1 */
+  animation: fadein 0.2s;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #272727;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #272727 transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
-@media only screen and (min-width: 1000px) { 
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
-    .pop-up{
-        position: absolute;
-        top: 52%; left: 50%;
-        transform: translate(-50%,-50%);
-        display: flex;
-        flex-direction: column;
-        width: 90%;
-        max-width: 1050px;
-        max-height: 800px;
-    }
+@media only screen and (min-width: 1000px) {
+  .pop-up {
+    position: absolute;
+    top: 52%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    max-width: 1050px;
+    max-height: 800px;
+  }
 
-    .pop-up-container {
-        display: flex;
-        flex-direction: row;
-        height: 550px;
-    }
+  .pop-up-container {
+    display: flex;
+    flex-direction: row;
+    height: 550px;
+  }
 
-    .pop-up-container-first {
-        padding:40px;
-        width:50%;
+  .pop-up-container-first {
+    padding: 40px;
+    width: 50%;
+  }
 
-    }
+  .pop-up-header h3 {
+    width: 500px;
+    padding: 20px;
+  }
 
-    .pop-up-header h3 {
-        width: 500px;
-        padding: 20px;
-    }
+  .pop-up-header img {
+    top: 20px;
+    left: 20px;
+  }
 
-    .pop-up-header img {
-        top:20px;
-        left: 20px;
-    }
-    
-    
-    .pop-up-container-first div img {
-        margin-right:20px;
+  .pop-up-container-first div img {
+    margin-right: 20px;
+  }
 
-    }
-    
-    .pop-up-container-second{
-        padding:40px;
-        width:50%;
+  .pop-up-container-second {
+    padding: 40px;
+    width: 50%;
+  }
 
-    }
-
-    .name-phone{
-        display:flex;
-        flex-direction: row !important;
-        justify-content:space-between
-    }
-    .name-phone input{
-        width: 46%;
-    }
-
-
-
-
+  .name-phone {
+    display: flex;
+    flex-direction: row !important;
+    justify-content: space-between;
+  }
+  .name-phone input {
+    width: 46%;
+  }
 }
