--- a/src/app/components/house-detail-new/house-detail-new.component.html
+++ b/src/app/components/house-detail-new/house-detail-new.component.html
@@ -1,20 +1,27 @@
-<!-- Need to turn around with flexbox -->
 <div class="house-whole" [@cardAnimation]="houses.length">
-<div [routerLink]="['', house.id]"  class="house-detail-container" *ngFor="let house of houses">
+  <div
+    [routerLink]="['', house.id]"
+    class="house-detail-container"
+    *ngFor="let house of houses"
+  >
     <div class="house-detail-first">
-        <img src="{{ house.imgPlaceholder }}" alt="">
+      <img src="{{ house.imgPlaceholder }}" alt="" />
     </div>
     <div class="house-detail-second">
-        <p> {{ house.type }} | <span>{{ house.m2 }}㎡ </span></p>
-        <h5>{{ house.street}} </h5>
-        <h5><span>{{ house.city }}</span></h5>
-        <div class="house-detail-buttons">
-            <button class="btn-small">{{ house.status }}</button>
-            <div class="house-detail-more">
-                <p>more</p>
-                <img src="assets/arrow-btn-large-right.svg" alt="">
-            </div>
+      <p>
+        {{ house.type }} | <span>{{ house.m2 }}㎡ </span>
+      </p>
+      <h5>{{ house.street }}</h5>
+      <h5>
+        <span>{{ house.city }}</span>
+      </h5>
+      <div class="house-detail-buttons">
+        <button class="btn-small">{{ house.status }}</button>
+        <div class="house-detail-more">
+          <p>more</p>
+          <img src="assets/arrow-btn-large-right.svg" alt="" />
         </div>
+      </div>
     </div>
-</div>
+  </div>
 </div>
