--- a/src/app/components/image-background/image-background.component.html
+++ b/src/app/components/image-background/image-background.component.html
@@ -1,10 +1,6 @@
 <div class="mySlides fade">
-    <div>
-        <img 
-        [ngStyle]="styles" 
-        src="assets/chandeleer.png" alt="">
-        <div [class.background_change]="background_variable" class="shadow">
-        </div>
-    </div>
-</div>  
-
+  <div>
+    <img [ngStyle]="styles" src="assets/woning2-1.webp" alt="" />
+    <div [class.background_change]="background_variable" class="shadow"></div>
+  </div>
+</div>
