--- a/src/app/pages/verkoop/verkoop-details/verkoop-details.component.scss
+++ b/src/app/pages/verkoop/verkoop-details/verkoop-details.component.scss
@@ -1,244 +1,243 @@
-
-
 img {
-    transition: transform .2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
 }
 
 .swiper-pagination {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .back-button {
-    margin: auto;
-    width: 80%;
-    max-width: 1200px;
-    margin-top: -30px;
-    margin-bottom: 40px;
-    display: flex;
-    align-items: center;
-    cursor:pointer;
+  margin: auto;
+  width: 80%;
+  max-width: 1200px;
+  margin-top: -30px;
+  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
 .pictures-total {
-    display: flex;
-    align-items: center;
-    width: 120px;
-    margin: auto;
-    justify-content: space-between;
-    cursor: pointer;
-    margin-top: 50px;
-    margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  width: 120px;
+  margin: auto;
+  justify-content: space-between;
+  cursor: pointer;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .back {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
-
 .back-button:hover img {
-    transform: translate3d(-2px, 0px, 0px);
-    transition: transform .2s ease-in-out;
+  transform: translate3d(-2px, 0px, 0px);
+  transition: transform 0.2s ease-in-out;
 }
 
 .pictures-total:hover img {
-    transform: translate3d(0px, 2px, 0px);
-    transition: transform .2s ease-in-out;
+  transform: translate3d(0px, 2px, 0px);
+  transition: transform 0.2s ease-in-out;
 }
 
 .description-container {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    align-content: center;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  align-content: center;
 }
 
 .description-first {
-    width: 80%;
-    max-width: 500px;
-    padding: 20px;
-    background-color: #f4f4f4;
-    margin: auto;
-    border-radius: 10px;
+  width: 80%;
+  max-width: 500px;
+  padding: 20px;
+  background-color: #f4f4f4;
+  margin: auto;
+  border-radius: 10px;
 }
 
 .description-first button {
-    margin-top: 10px;
+  margin-top: 10px;
+  margin-right: 16px;
 }
 
 .description-second {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    text-align: center;
-    margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  text-align: center;
+  margin-top: 30px;
 }
 
 .description-second div {
-    width: 170px;
-    height: 155px;
-    background-color: #f4f4f4;
-    border-radius: 10px;
-    margin: 10px;
+  width: 170px;
+  height: 155px;
+  background-color: #f4f4f4;
+  border-radius: 10px;
+  margin: 10px;
 }
 
 .description-second h6 {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .description-second h4 {
-    color: black;
+  color: black;
 }
 
 .swiper {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .swiper-slide {
-    background: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-  }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-  }
-
-  .swiper-container-pointer-events {
-    touch-action: pan-y;
+  width: 100%;
+  height: 100%;
 }
 
-  .swiper-container {
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    overflow: hidden;
-    list-style: none;
-    padding: 0;
-    z-index: 1;
+.swiper-slide {
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
 
-.swiper-pagination-fraction, .swiper-pagination-custom, .swiper-container-horizontal > .swiper-pagination-bullets {
-    bottom: 10px;
-    left: 0;
-    width: 100%;
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
 }
-  
-.swiper-pagination {
-    margin-top: 50px;
+
+.swiper-container-pointer-events {
+  touch-action: pan-y;
+}
+
+.swiper-container {
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+  z-index: 1;
+}
+
+.swiper-pagination-fraction,
+.swiper-pagination-custom,
+.swiper-container-horizontal > .swiper-pagination-bullets {
+  bottom: 10px;
+  left: 0;
+  width: 100%;
 }
 
 .swiper-pagination {
-    position: absolute;
-    text-align: center;
-    transition: 300ms opacity;
-    transform: translate3d(0, 0, 0);
-    z-index: 10;
+  margin-top: 50px;
+}
+
+.swiper-pagination {
+  position: absolute;
+  text-align: center;
+  transition: 300ms opacity;
+  transform: translate3d(0, 0, 0);
+  z-index: 10;
 }
 
 element.style {
-    transform: translate3d(0px, 0px, 0px);
+  transform: translate3d(0px, 0px, 0px);
 }
 
-.swiper-container-android .swiper-slide, .swiper-wrapper {
-    transform: translate3d(0px, 0, 0);
+.swiper-container-android .swiper-slide,
+.swiper-wrapper {
+  transform: translate3d(0px, 0, 0);
 }
 
 .swiper-wrapper {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    display: flex;
-    transition-property: transform;
-    box-sizing: content-box;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  transition-property: transform;
+  box-sizing: content-box;
 }
 
 .swiper-slide {
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .swiper-slide {
-    flex-shrink: 0;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    transition-property: transform;
+  flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition-property: transform;
 }
 
-.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
-    margin: 0 4px;
+.swiper-container-horizontal
+  > .swiper-pagination-bullets
+  .swiper-pagination-bullet {
+  margin: 0 4px;
 }
 
 .swiper-pagination-clickable .swiper-pagination-bullet {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .swiper-pagination-bullet-active {
-    opacity: 1;
-    background: #F0E2D7!important;
+  opacity: 1;
+  background: #f0e2d7 !important;
 }
 
 .swiper-pagination-bullet {
-    width: 8px;
-    height: 8px;
-    display: inline-block;
-    border-radius: 50%;
-    background: #000;
-    opacity: 1!important;
+  width: 8px;
+  height: 8px;
+  display: inline-block;
+  border-radius: 50%;
+  background: #000;
+  opacity: 1 !important;
 }
-  
 
 @media only screen and (min-width: 600px) {
-    .description-second {
-        flex-direction: row;
-    }   
+  .description-second {
+    flex-direction: row;
+  }
 }
 
-@media only screen and (min-width: 800px) { 
-
-    .back-button {
-        margin: auto;
-        width: 80%;
-        margin-top: -50px;
-        margin-bottom: 40px;
-        display: flex;
-        align-items: center;
-        cursor:pointer;
-    }
+@media only screen and (min-width: 800px) {
+  .back-button {
+    margin: auto;
+    width: 80%;
+    margin-top: -50px;
+    margin-bottom: 40px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
 }
-
 
 @media only screen and (min-width: 1200px) {
-    .description-container {
-        flex-direction: row;
-        max-width: 1200px;
-        margin-top: 60px;
-    }   
+  .description-container {
+    flex-direction: row;
+    max-width: 1200px;
+    margin-top: 60px;
+  }
 
-    .pictures-total {
-        margin-top: 70px;
-        margin-bottom: 70px;
-    }
+  .pictures-total {
+    margin-top: 70px;
+    margin-bottom: 70px;
+  }
 
-    .description-second {
-        margin-top: auto;
-    }
+  .description-second {
+    margin-top: auto;
+  }
 }
-
